# Cmulator

./: CMakeLists.txt  CMakePresets.json  Cmulator.cpp  PORTING_PROGRESS.md  build_deps.bat  build_x.bat  cmake_config.bat  diag_vs.bat  main.cpp  mb.bat  nativehooks.cpp  q.bat  run_test.bat  test_build.bat  test_cmu.bat  test_deps.cpp  vcpkg.json
.deepseek/: instructions.md
Core/: Emu.cpp  Emu.h  FnHook.cpp  FnHook.h  Globals.cpp  Globals.h  JSEmuObj.cpp  JSEmuObj.h  JSPlugins_Engine.cpp  JSPlugins_Engine.h  MemManager.cpp  MemManager.h  NativeHooks.cpp  NativeHooks.h  PE_Loader.cpp  PE_Loader.h  Segments.cpp  Segments.h  Struct.h  TEP_PEB.cpp  TEP_PEB.h  Utils.cpp  Utils.h  emu_hooks.cpp  emu_init.cpp  js_engine.cpp  js_engine.h  types.h
Core/PE/: pe_image.cpp
Core/process/: ethreads.h
src/: emu.h  emu_init.cpp  ethreads.cpp  fnhook.h  globals.h  js_engine.cpp  main.cpp  nativehooks.cpp  nativehooks.h  pe_image.cpp  pe_image.h  pe_loader.cpp  pe_loader.h  segments.cpp  struct.h  tep_peb.h  utils.cpp  utils.h
